# django-yamlconf

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
django_yamlconf/: VERSION  __init__.py  urls.py  views.py
django_yamlconf/management/: __init__.py
django_yamlconf/management/commands/: __init__.py  ycexplain.py  yclist.py  ycsysfiles.py
django_yamlconf/static/yamlconf/: yamlconf.css
django_yamlconf/templates/yamlconf/: attribute.html  base.html  index.html  value.html
django_yamlconf/templatetags/: __init__.py  yamconf_tags.py
django_yamlconf/tests/: __init__.py  append.yaml  defattrs.yaml  env.yaml  expand.yaml  invalid.yaml  jsonenv.yaml  lists.yaml  simplesets.yaml  test_add_attrs.py  test_append_err.py  test_defattrs.py  test_envattrs.py  test_envfile.py  test_expand.py  test_invalid_loader.py  test_invalid_yaml.py  test_jsonenv.py  test_nested_dict.py  test_not_dict_set.py  test_predefines.py  test_simplesets.py  test_ycexplain.py  test_yclist.py  test_ycsysfiles.py  ycexplain.yaml  yclist.yaml
docs/: Makefile  api.rst  conf.py  contributing.rst  examples.rst  format.rst  index.rst  limitations.rst  mgmt-cmds.rst  releases.rst  requirements.txt
docs/_static/: README.txt
etc/: git-commit-template.txt
examples/: Makefile  NOTICE  mysite.yaml
examples/django-1.11/: Makefile  requirements.txt
examples/django-1.11/mysite/: manage.py
examples/django-2.0/: Makefile  requirements.txt
examples/django-2.0/mysite/: django_yamlconf  manage.py
examples/django-3.0/: Makefile  requirements.txt
examples/django-3.0/mysite/: manage.py
examples/django-4/: requirements.txt
examples/django-5/: Makefile  requirements.txt
src/django_yamlconf/: __init__.py  urls.py  views.py
src/django_yamlconf/management/: __init__.py
src/django_yamlconf/templatetags/: __init__.py  yamconf_tags.py
src/django_yamlconf/tests/: __init__.py  env.yaml  (+20 more)
support/templates/: git-commit-template.md
tests/: __init__.py  defattrs.yaml  expand.yaml  invalid.yaml  settings.py  simplesets.yaml  test_add_attrs.py  test_append_err.py  test_defattrs.py  test_envattrs.py  test_envfile.py  test_expand.py  test_invalid_loader.py  test_invalid_yaml.py  test_jsonenv.py  test_mc_ycexplain.py  test_mc_yclist.py  test_nested_dict.py  test_not_dict_set.py  test_predefines.py  test_simplesets.py  test_views.py  test_ycexplain.py  test_yclist.py  test_ycsysfiles.py  tests.yaml  urls.py
(+63 files in other folders)
