# Copyright (c) 2025 Broadcom. All Rights Reserved.
# The term "Broadcom" refers to Broadcom Inc.  and/or its subsidiaries.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-yamlconf"
dynamic = [
    "version"
]
authors = [
  { name="Michael Rohan", email="michael.rohan@broadcom.com" },
]
description = "Define Django settings in local YAML (or JSON) files"
readme = "README.md"
requires-python = ">=2.7"
dependencies = [
    "PyYAML>=3.10",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[tool.hatch.version]
path = "src/django_yamlconf/__init__.py"

[project.urls]
Homepage = "https://django-yamlconf.readthedocs.io/en/latest/"
Issues = "https://github.com/vmware/django-yamlconf/issues"
