# Copyright (c) 2025 Broadcom. All Rights Reserved.
# The term "Broadcom" refers to Broadcom Inc.  and/or its subsidiaries.

[project]
name = "django-yamlconf"
dynamic = [
    "version"
]
authors = [
  { name="Michael Rohan", email="michael.rohan@broadcom.com" },
]
description = "Define Django settings in local YAML (or JSON) files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=3.10",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://django-yamlconf.readthedocs.io/en/latest/"
Issues = "https://github.com/vmware/django-yamlconf/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/django_yamlconf/__init__.py"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py"]
